# gate-backtest

./: .gitignore  LICENSE  README.md  backtest_runner.py  init_github.sh  pyproject.toml  requirements.txt  setup.py
configs/: README.md  params.json  params_test.json
docs/: USER_STRATEGY_TUTORIAL.md
examples/: 01_simple_rsi.py  02_ma_cross.py  03_bollinger_bands.py  04_grid_strategy.py  05_martingale.py  README.md  backtest_main.py
html/: README.md  backtest_report.html  test_data.json  test_metrics.json
runner/: README.md  __init__.py  strategy_wrapper.py
runner/adapters/: __init__.py  backtrader_adapter.py  gate_adapter.py  gatestrategy_adapter.py
runner/backtest/: __init__.py  analyzers.py  engine.py
runner/data/: __init__.py  fetcher.py
runner/strategies/: __init__.py  user_strategy.py
runner/utils/: __init__.py  config.py
scripts/: README.md  backtest.py  export_results.py  run.py  run_backtest.py
unittest/: README.md  helpers.py  test_backtrader.py  test_engine.py  test_export.py  test_metrics_calculation.py
