[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gate-backtest"
version = "0.1.0"
description = "Gate.io量化策略回测框架 - 基于backtrader"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Claw", email = "claw@example.com"}
]
keywords = ["quantitative", "trading", "backtest", "gate.io", "crypto"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "backtrader>=1.9.0",
    "ccxt>=4.0.0",
]

[project.optional-dependencies]
indicators = ["ta-lib>=0.4.28"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourname/gate-backtest"
Documentation = "https://github.com/yourname/gate-backtest#readme"
Repository = "https://github.com/yourname/gate-backtest"
Issues = "https://github.com/yourname/gate-backtest/issues"

[project.scripts]
gate-backtest = "scripts.run_backtest:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gate_backtest*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
